--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         }
     },
     "require" : {
-        "php" : ">=5.3.3",
+        "php" : ">=5.5",
         "aws/aws-sdk-php" : "~2.7",
-        "guzzle/guzzle" : "~3.7",
+        "guzzlehttp/guzzle" : "~6.0",
         "herrera-io/phar-update": "~2.0",
         "monolog/monolog": "~1.12",
         "symfony/console" : "~2.6",
