--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
         "guzzlehttp/guzzle" : "~6.0",
         "herrera-io/phar-update": "~2.0",
         "monolog/monolog": "~1.12",
+        "pimple/pimple" : "~3.0",
+        "symfony/config" : "~2.6",
+        "symfony/filesystem" : "~2.6",
         "symfony/console" : "~2.6",
         "symfony/debug": "~2.6",
-        "symfony/options-resolver" : "~2.6",
-        "symfony/process" : "~2.6"
+        "symfony/process" : "~2.6",
+        "symfony/yaml" : "~2.6"
     }
 }
