--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "pimple/pimple" : "~3.0",
         "symfony/config" : "~2.6",
         "symfony/filesystem" : "~2.6",
+        "symfony/http-foundation" : "~2.6",
         "symfony/console" : "~2.6",
         "symfony/debug": "~2.6",
         "symfony/process" : "~2.6",
