--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license" : "MIT",
     "autoload" : {
         "psr-0" : {
-            "TLE\\ElfBot" : "src"
+            "TLE\\Elfbot" : "src"
         }
     },
     "require" : {
